Fix to remove horizontal scroll bar

--- a/src/app/home/home.style.css
+++ b/src/app/home/home.style.css
@@ -426,3 +426,9 @@ img.left {
   font-size: 18px;
   font-weight: normal;
 }
+
+.row { 
+  /* fix: remove horizontal scroll */
+  margin-right: 0px;
+  margin-left: 0px;
+}
